[package]
name = "sc-client-api"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate client interfaces."
documentation = "https://docs.rs/sc-client-api"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
derive_more = "0.99.2"
sc-executor = { version = "0.9.0", path = "../executor" }
sp-externalities = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
fnv = "1.0.6"
futures = "0.3.1"
hash-db = { version = "0.15.2", default-features = false }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-inherents = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
kvdb = "0.9.0"
log = "0.4.8"
parking_lot = "0.11.1"
lazy_static =  "1.4.0"
sp-database = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-keystore = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-version = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-trie = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-storage = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.9.0", path = "../../utils/prometheus" }

[dev-dependencies]
kvdb-memorydb = "0.9.0"
sp-test-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
#substrate-test-runtime = { version = "2.0.0", path = "../../test-utils/runtime"  }
thiserror = "1.0.21"
