[package]
name = "sc-client-db"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Client backend that uses RocksDB database as storage."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parking_lot = "0.11.1"
log = "0.4.8"
kvdb = "0.9.0"
kvdb-rocksdb = { version = "0.11.0", optional = true }
kvdb-memorydb = "0.9.0"
linked-hash-map = "0.5.2"
hash-db = "0.15.2"
parity-util-mem = { version = "0.9.0", default-features = false, features = ["std"] }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
blake2-rfc = "0.2.18"

sc-client-api = { version = "3.0.0", path = "../api" }
sp-arithmetic = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-executor = { version = "0.9.0", path = "../executor" }
sc-state-db = { version = "0.9.0", path = "../state-db" }
sp-trie = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-database = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
parity-db = { version = "0.2.3", optional = true }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.9.0", path = "../../utils/prometheus" }

[dev-dependencies]
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
quickcheck = "1.0.3"
kvdb-rocksdb = "0.11.0"
tempfile = "3"

[features]
default = []
test-helpers = []
with-kvdb-rocksdb = ["kvdb-rocksdb"]
with-parity-db = ["parity-db"]
