[package]
description = "components for a light client"
name = "sc-light"
version = "3.0.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-light"
readme = "README.md"

[dependencies]
parking_lot = "0.11.1"
lazy_static = "1.4.0"
hash-db = "0.15.2"
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-externalities = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-client-api = { version = "3.0.0", path = "../api" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
codec = { package = "parity-scale-codec", version = "2.0.0" }
sc-executor = { version = "0.9.0", path = "../executor" }

[features]
default = []
