[package]
name = "module-common"
description = "Shared traits"
license = "Apache-2.0"
version = "4.0.0-dev"
authors = ["Vertic Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { path = "../../primitives/runtime", default-features = false }
sp-io = { path = "../../primitives/io", default-features = false }
sp-std = { path = "../../primitives/std", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.1"
frame-support = { path = "../../frame/support", default-features = false }
#orml-utilities = { path = "../utilities", version = "0.4.1-dev", default-features = false }
#xcm = { git = "https://github.com/patractlabs/polkadot", branch = "patract-sandbox-xcmp", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"num-traits/std",
	"frame-support/std",
#	"orml-utilities/std",
#	"xcm/std",
]
