[package]
name = "orml-tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
#max-encoded-len = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-runtime = { path = "../../primitives/runtime", default-features = false }
sp-std = { path = "../../primitives/std", default-features = false }
frame-support = {  path = "../../frame/support", default-features = false }
frame-system = {  path = "../../frame/system", default-features = false }
orml-traits = { path = "../traits", default-features = false }

[dev-dependencies]
#sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
#sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
#pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
#pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
]
#runtime-benchmarks = [
#	"frame-support/runtime-benchmarks",
#	"frame-system/runtime-benchmarks",
#]
#try-runtime = ["frame-support/try-runtime"]
