[package]
name = "sp-runtime"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/patractlabs/substrate/"
description = "Runtime Modules shared primitive types."
documentation = "https://docs.rs/sp-runtime"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
serde = { version = "1.0.126", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
sp-application-crypto = { version = "4.0.0-dev", default-features = false, path = "../application-crypto" }
sp-arithmetic = { version = "4.0.0-dev", default-features = false, path = "../arithmetic" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
sp-io = { version = "4.0.0-dev", default-features = false, path = "../io" }
#sp-keyring = { version = "4.0.0-dev", optional = true, path = "../keyring" }
log = { version = "0.4.14", default-features = false }
paste = "1.0"
rand = { version = "0.7.2", optional = true }
impl-trait-for-tuples = "0.2.1"
parity-util-mem = { version = "0.10.0", default-features = false, features = ["primitive-types"] }
hash256-std-hasher = { version = "0.15.2", default-features = false }
either = { version = "1.5", default-features = false }
sha3 = { version = "0.8", default-features = false }
libsecp256k1 = { version = "0.3.2", default-features = false, features = ["hmac"] }
#libsecp256k1 = { version = "0.6", default-features = false, features = ["hmac", "static-context"], optional = true }
hex = { version = "0.4.3", optional = true }

#[dependencies.keyring]
#package = "sp-keyring"
#path = "../keyring"

[dev-dependencies]
serde_json = "1.0.41"
rand = "0.7.2"
sp-state-machine = { version = "0.10.0-dev", path = "../state-machine" }
sp-api = { version = "4.0.0-dev", path = "../api" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
sp-tracing = { version = "4.0.0-dev", path = "../../primitives/tracing" }

[features]
bench = []
runtime-benchmarks = []
default = ["std"]
std = [
	"sp-application-crypto/std",
	"sp-arithmetic/std",
	"codec/std",
	"log/std",
	"hex/std",
	"sha3/std",
	"libsecp256k1/std",
	"sp-core/std",
	"rand",
	"sp-std/std",
	"sp-io/std",
	"serde",
	"parity-util-mem/std",
	"hash256-std-hasher/std",
	"either/use_std",
]
