[package]
name = "sc-consensus-aura"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Aura consensus algorithm for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-block-builder = { version = "0.9.0", path = "../../block-builder" }
sc-client-api = { version = "3.0.0", path = "../../api" }
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus-slots = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
derive_more = "0.99.2"
futures = "0.3.9"
futures-timer = "3.0.1"
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
log = "0.4.8"
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-consensus-slots = { version = "0.9.0", path = "../slots" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-telemetry = { version = "3.0.0", path = "../../telemetry" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../../utils/prometheus", version = "0.9.0"}
async-trait = "0.1.42"
# We enable it only for web-wasm check
# See https://docs.rs/getrandom/0.2.1/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-executor = { version = "0.9.0", path = "../../executor" }
sc-keystore = { version = "3.0.0", path = "../../keystore" }
sc-network = { version = "0.9.0", path = "../../network" }
sc-network-test = { version = "0.8.0", path = "../../network/test" }
sc-service = { version = "0.9.0", default-features = false, path = "../../service" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
tempfile = "3.1.0"
parking_lot = "0.11.1"
