[package]
name = "sc-consensus-babe"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "BABE consensus algorithm for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-consensus-babe"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-application-crypto = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
num-bigint = "0.2.3"
num-rational = "0.2.2"
num-traits = "0.2.8"
serde = { version = "1.0.104", features = ["derive"] }
sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-telemetry = { version = "3.0.0", path = "../../telemetry" }
sc-keystore = { version = "3.0.0", path = "../../keystore" }
sc-client-api = { version = "3.0.0", path = "../../api" }
sc-consensus-epochs = { version = "0.9.0", path = "../epochs" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus-slots = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus-vrf = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-consensus-uncles = { version = "0.9.0", path = "../uncles" }
sc-consensus-slots = { version = "0.9.0", path = "../slots" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
fork-tree = { version = "3.0.0", path = "../../../utils/fork-tree" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../../utils/prometheus", version = "0.9.0"}
futures = "0.3.9"
futures-timer = "3.0.1"
parking_lot = "0.11.1"
log = "0.4.8"
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated"] }
rand = "0.7.2"
merlin = "2.0"
pdqselect = "0.1.0"
derive_more = "0.99.2"
retain_mut = "0.1.2"
async-trait = "0.1.42"

[dev-dependencies]
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-executor = { version = "0.9.0", path = "../../executor" }
sc-network = { version = "0.9.0", path = "../../network" }
sc-network-test = { version = "0.8.0", path = "../../network/test" }
sc-service = { version = "0.9.0", default-features = false, path = "../../service" }
#substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
sc-block-builder = { version = "0.9.0", path = "../../block-builder" }
rand_chacha = "0.2.2"
tempfile = "3.1.0"
