[package]
name = "sc-consensus-manual-seal"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Manual sealing engine for Substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
derive_more = "0.99.2"
futures = "0.3.9"
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
log = "0.4.8"
parking_lot = "0.11.1"
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0", features=["derive"] }
assert_matches = "1.3.0"
async-trait = "0.1.42"

sc-client-api = { path = "../../api", version = "3.0.0"}
sc-consensus-babe = { path = "../../consensus/babe", version = "0.9.0"}
sc-consensus-epochs = { path = "../../consensus/epochs", version = "0.9.0"}
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", rev="22193e0"}

sc-transaction-pool = { path = "../../transaction-pool", version = "3.0.0"}
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-consensus = { git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-inherents = { git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-runtime = {  git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-core = {  git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-keystore = {  git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-keyring = {  git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-api = {  git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", rev="22193e0"}
sp-timestamp = { git = "https://github.com/paritytech/substrate", rev="22193e0"}

prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../../utils/prometheus", version = "0.9.0"}

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }
sc-basic-authorship = { path = "../../basic-authorship", version = "0.9.0"}
#substrate-test-runtime-client = { path = "../../../test-utils/runtime/client", version = "2.0.0" }
#substrate-test-runtime-transaction-pool = { path = "../../../test-utils/runtime/transaction-pool", version = "2.0.0" }
tempfile = "3.1.0"
