[package]
name = "sc-consensus-slots"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic slots-based utilities for consensus"
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
sc-client-api = { version = "3.0.0", path = "../../api" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-trie = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-application-crypto = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-arithmetic = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus-slots = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-telemetry = { version = "3.0.0", path = "../../telemetry" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
futures = "0.3.9"
futures-timer = "3.0.1"
log = "0.4.11"
thiserror = "1.0.21"
async-trait = "0.1.42"

[dev-dependencies]
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
