[package]
name = "sc-runtime-test"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
publish = false
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-allocator = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-sandbox = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-tasks = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", path = "../../../utils/wasm-builder" }

[features]
default = [ "std" ]
std = [
	"sp-allocator/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-sandbox/std",
	"sp-std/std",
 	"sp-tasks/std",
]
