[package]
name = "sc-consensus-babe-rpc"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "RPC extensions for the BABE consensus algorithm"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-consensus-babe = { version = "0.9.0", path = "../" }
sc-rpc-api = { version = "0.9.0", path = "../../../rpc-api" }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
serde = { version = "1.0.104", features=["derive"] }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-consensus-epochs = { version = "0.9.0", path = "../../epochs" }
futures = { version = "0.3.4", features = ["compat"] }
derive_more = "0.99.2"
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-application-crypto = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }

[dev-dependencies]
sc-consensus = { version = "0.9.0", path = "../../../consensus/common" }
serde_json = "1.0.50"
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
sc-keystore = { version = "3.0.0", path = "../../../keystore" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../../test-utils/runtime/client" }
tempfile = "3.1.0"
